fix: subway status pills overlapping with status text - seems like having min-width was causing it so that the divs weren't   respecting the full size of the pills - alongside that, we needed to add Shuttle as a specific alert type to   show the alert link - removes min-width from the container for the RoutePill and adjusted   logic so that if it's a Delay, we only change the status whereas the   other statuses change the location

--- a/assets/css/lcd/subway_status.scss
+++ b/assets/css/lcd/subway_status.scss
@@ -61,10 +61,6 @@
   white-space: nowrap;
 }
 
-.subway-status__pill-container {
-  min-width: 136px;
-}
-
 .subway-status__text-container {
   display: flex;
   gap: 16px;
